--- a/doc/proyectdoc/tex/1_Introduccion.tex
+++ b/doc/proyectdoc/tex/1_Introduccion.tex
@@ -1,3 +1,67 @@
 \capitulo{1}{Introducción}
 
-Descripción del contenido del trabajo y del estrucutra de la memoria y del resto de materiales entregados.
+Los profesores, a día de hoy, utilizan plataformas para poder facilitar su trabajo, proporcionando recursos, haciendo exámenes o teses, de manera on-line. No es que se quede anticuada la forma tradicional de impartir clases, si no que evoluciona, para facilitar el trabajo a ellos mismos y a los alumnos.
+La mas utilizada y a la vez la que estamos utilizando en la Universidad de Burgos es moodle, en concreto la versión 3.3.
+
+PONER ESTADISTICAS ACTUALES"""""""""""""""""""""""""""""
+
+Lo que queremos conseguir aprovechando el potencial de moodle, es, una aplicación de escritorio, en la que podremos pasarle un log, que nos lo generan los registros de moodle en cada asignatura y el profesor puede acceder a ellos sin ningún problema, para facilitarle su interpretación, con un muestreo de los datos en formato de gráficas, filtrando por usuarios de esa asignatura (contando con el usuario administrador, el usuario sistema, usuario invitado y desconocido, como no sabemos los usuarios exactos que hay en los moodle de producción, los colocaremos en desconocidos para controlar su interacción en la asignatura) y los tipos de evento realizado. 
+Con esto podremos permitir al profesor un control de su asignatura, casi completo. Por ejemplo, podra saber cuantas veces un alumno a entrado en calificaciones, a subido un trabajo, hasta si un administrador ha estado visitando su asignatura o creado nuevos elementos en ella.
+
+\section{Estructura de la memoria}\label{estructura-de-la-memoria}
+
+La memoria sigue la siguiente estructura:
+
+\begin{itemize}
+	\tightlist
+	\item
+	\textbf{Introducción:} breve descripción del problema a resolver y la
+	solución propuesta. Estructura de la memoria y listado de materiales
+	adjuntos.
+	\item
+	\textbf{Objetivos del proyecto:} exposición de los objetivos que
+	persigue el proyecto.
+	\item
+	\textbf{Conceptos teóricos:} breve explicación de los conceptos
+	teóricos clave para la comprensión de la solución propuesta.
+	\item
+	\textbf{Técnicas y herramientas:} listado de técnicas metodológicas y
+	herramientas utilizadas para gestión y desarrollo del proyecto.
+	\item
+	\textbf{Aspectos relevantes del desarrollo:} exposición de aspectos
+	destacables que tuvieron lugar durante la realización del proyecto.
+	\item
+	\textbf{Trabajos relacionados:} estado del arte en el campo de la
+	monitorización de la actividad de vuelo de colmenas y proyectos
+	relacionados.
+	\item
+	\textbf{Conclusiones y líneas de trabajo futuras:} conclusiones
+	obtenidas tras la realización del proyecto y posibilidades de mejora o
+	expansión de la solución aportada.
+\end{itemize}
+
+Junto a la memoria se proporcionan los siguientes anexos:
+
+mETER LOS ANEXOS
+
+\section{Materiales adjuntos}\label{materiales-adjuntos}
+
+Los materiales que se adjuntan con la memoria son: 
+
+\begin{itemize}
+	\tightlist
+	\item
+	Aplicación UBULog 1.0
+\end{itemize}
+
+Además, los siguientes recursos están accesibles a través de internet:
+
+\begin{itemize}
+	\tightlist
+	\item
+	Página web del proyecto LA QUE SEA......
+	
+\end{itemize}
+
+
+
