Primeros temas memoria. [#13]

--- a/doc/proyectdoc/bibliografia.bib
+++ b/doc/proyectdoc/bibliografia.bib
@@ -1,28 +1,78 @@
-@book{koza92,
-		author    = "Koza, John R.",
-		title     = "Genetic Programming: On the Programming of Computers by Means of Natural Selection",
-		publisher = "MIT Press",
-		year      = "1992"
+@misc{,
+title = {{Mendeley - aplicaci{\'{o}}n para guardar y exportar referencias a latex}},
+url = {https://www.mendeley.com/}
 }
-
-
-@misc{ wiki:latex,
-       author = "Wikipedia",
-       title = "LaTeX --- Wikipedia{,} La enciclopedia libre",
-       year = "2015",
-       url = "https://es.wikipedia.org/w/index.php?title=LaTeX&oldid=84209252",
-       note = "[Internet; descargado 30-septiembre-2015]"
+@misc{,
+title = {{git reflog | Tutorial para aprender git}},
+url = {https://www.atlassian.com/git/tutorials/rewriting-history/git-reflog}
 }
-
-
-@article{bortolot2005,
-  title={Estimating forest biomass using small footprint LiDAR data: An individual tree-based approach that incorporates training data},
-  author={Bortolot, Zachary J and Wynne, Randolph H},
-  journal={ISPRS Journal of Photogrammetry and Remote Sensing},
-  volume={59},
-  number={6},
-  pages={342--360},
-  year={2005},
-  publisher={Elsevier}
+@misc{,
+title = {{Travis CI - Integraci{\'{o}}n continua}},
+url = {https://travis-ci.org/trona85/GII-17.1B-UBULog-1.0/}
 }
-
+@misc{OscarFernandezArmengol,
+author = {{Oscar Fern{\'{a}}ndez Armengol}},
+title = {{GII-17.1B-UBULog-1.0 - sonarqube - Ver calidad del c{\'{o}}digo}},
+url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}
+}
+@misc{,
+title = {{Sublime Text 3 - IDE para javaScript y html}},
+url = {https://www.sublimetext.com/3}
+}
+@misc{,
+title = {{instalacion Moodle3.3 - MoodleDocs}},
+url = {https://docs.moodle.org/33/en/Installing{\_}Moodle}
+}
+@misc{,
+title = {{Funciones API web servic - MoodleDocs}},
+url = {https://docs.moodle.org/dev/Web{\_}service{\_}API{\_}functions}
+}
+@misc{,
+title = {{Libreria para generar los graficos - Chart.js {\textperiodcentered} Cocumentaci{\'{o}}n}},
+url = {http://www.chartjs.org/docs/latest/}
+}
+@misc{,
+title = {{Calendar (Java Platform SE 8 )}},
+url = {https://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html{\#}set-int-int-}
+}
+@misc{,
+title = {{FileWriter (Java Platform SE 8 )}},
+url = {https://docs.oracle.com/javase/8/docs/api/java/io/FileWriter.html}
+}
+@misc{,
+title = {{Moodle.org: Estad{\'{i}}sticas del uso de moodle}},
+url = {https://moodle.net/stats/}
+}
+@book{LasaGomez2017,
+abstract = {Índices},
+author = {{Lasa Gómez}, Carmen and {Alvarez García}, Alonso and {de las Heras del Dedo}, Rafael},
+isbn = {9788441538887},
+publisher = {Anaya Multimedia},
+title = {{Métodos ágiles Scrum, Kanban, Lean}},
+year = {2017}
+}
+@book{Schwaber2004,
+abstract = {Includes index. Foreword / Mike Cohn – Foreword / Mary Poppendieck – 1. Backdrop: The Science of Scrum – 2. New Management Responsibilities – 3. The ScrumMaster – 4. Bringing Order from Chaos – 5. The Product Owner – 6. Planning a Scrum Project – 7. Project Reporting – Keeping Everything Visible – 8. The Team – 9. Scaling Projects Using Scrum.},
+author = {Schwaber, Ken.},
+isbn = {073561993X},
+pages = {163},
+publisher = {Microsoft Press},
+title = {{Agile project management with Scrum}},
+year = {2004}
+}
+@book{,
+title = {{Resumen del libro Scrum, de Jeff Sutherland}},
+url = {https://www.leadersummaries.com/ver-resumen/scrum}
+}
+@article{,
+journal = {Proyectos {\'{A}}giles},
+title = {{Beneficios de Scrum}},
+url = {http://www.proyectosagiles.org/beneficios-de-scrum},
+year = {2008}
+}
+@article{art:mvc,
+keywords = {wiki},,
+title = {{modelo vista controlador  — Wikipedia, La enciclopedia libre}},
+url = {https://es.wikipedia.org/wiki/Modelo–vista–controlador},
+year = {2017}
+}
