--- a/doc/proyectdoc/tex/2_Objetivos_del_proyecto.tex
+++ b/doc/proyectdoc/tex/2_Objetivos_del_proyecto.tex
@@ -1,3 +1,61 @@
 \capitulo{2}{Objetivos del proyecto}
 
-Este apartado explica de forma precisa y concisa cuales son los objetivos que se persiguen con la realización del proyecto. Se puede distinguir entre los objetivos marcados por los requisitos del software a construir y los objetivos de carácter técnico que plantea a la hora de llevar a la práctica el proyecto.
+
+A continuación, se detallan los diferentes objetivos que han motivado la
+realización del proyecto.
+
+\section{Objetivos generales}\label{objetivos-generales}
+
+\begin{itemize}
+	\tightlist
+	\item
+	Desarrollar una aplicación de escritorio para poder visualizar las interacciones realizadas en el moodle de la Universidad de Burgos, por los diferentes usuarios, en las distintas asignaturas.
+	\item
+	Facilitar la interpretación de los datos recogidos mediante
+	representaciones gráficas.
+	\item
+	Aportar información extra a los profesores de la asignatura, para saber la interacción que tienen sus alumnos con ella y otros usuarios como puede ser el administrador de moodle.
+	
+\end{itemize}
+
+\section{Objetivos técnicos}\label{objetivos-tecnicos}
+
+\begin{itemize}
+	\tightlist
+	\item
+	Desarrollar aplicación de escritorio con Java FX.
+	\item
+	Desarrollar lógica de programación en entorno Java 8
+	\item
+	Utilización de API WebService de moodle para la obtención de diferentes datos.
+	\item
+	Parseo de documentos csv.
+	\item
+	Utilizar Git como sistema de control de versiones distribuido junto
+	con la plataforma GitHub.
+	\item
+	Aplicar la metodología ágil Scrum en el desarrollo del software.
+	\item
+	Realizar test unitarios, de integración y de interfaz. SADFAFADSFSDD     REVISAR"""""""""""""""""""""
+	\item
+	Utilizar ZenHub como herramienta de gestión de proyectos.
+	\item
+	Utilizar Mendeley para almacenamiento de bibliografía.
+\end{itemize}
+
+\section{Objetivos personales}\label{objetivos-personales}
+
+\begin{itemize}
+	\tightlist
+	\item
+	Utilizar librería chart.js para generar los gráficos.
+	\item
+	Utilizar Gradle como herramienta para automatizar el proceso de
+	construcción de software.
+	\item
+	Hacer uso de herramientas de integración continua como Travis y
+	SonarQube en el repositorio.
+	\item
+	Aumentar los tipos de parseo de documentos.
+	
+\end{itemize}
