--- a/doc/proyectdoc/bibliografia.bib
+++ b/doc/proyectdoc/bibliografia.bib
@@ -1,47 +1,87 @@
-@misc{,
-title = {{Mendeley - aplicaci{\'{o}}n para guardar y exportar referencias a latex}},
-url = {https://www.mendeley.com/}
+@misc{Web:zenhub,
+	title = {zenhub},
+	url = {https://www.zenhub.com/faq},
+	urldate = {2017-12-03}
+}
+@misc{Web:eclipse,
+	author = {Web:eclipse},
+	title = {{Eclipse Neon}},
+	url = {https://www.eclipse.org/neon/},
+	urldate = {2017-12-03}
+}
+@misc{Web:texstudio,
+	title = {{TeXstudio}},
+	url = {https://www.texstudio.org/},
+	urldate = {2017-12-03}
+}
+@misc{Web:sonarqube,
+	title = {{SonarQube - GII-17.1B-UBULog-1.0 - Oscar Fernández}},
+	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0},
+	urldate = {2017-12-03}
+}@misc{web:github,
+	title = {{GitHub}},
+	url = {https://github.com/trona85/GII-17.1B-UBULog-1.0},
+	year = {2017}
+}
+@misc{web:git,
+	title = {{Git - Documentation}},
+	url = {https://git-scm.com/doc},
+	urldate = {2017-12-03}
+}
+@misc{javascript:table,
+	title = {{W3.CSS Filters}},
+	url = {https://www.w3schools.com/w3css/w3css{\_}filters.asp},
+	urldate = {2017-11-30}
+}
+@misc{java:csvparser,
+	title = {{CSVParser (Apache Commons CSV 1.5.1-SNAPSHOT API)}},
+	url = {https://commons.apache.org/proper/commons-csv/apidocs/org/apache/commons/csv/CSVParser.html{\#}parse-java.io.File-java.nio.charset.Charset-org.apache.commons.csv.CSVFormat-},
+	urldate = {2017-11-29}
+}
+@misc{web:mendeley,
+	title = {{Mendeley - aplicaci{\'{o}}n para guardar y exportar referencias a latex}},
+	url = {https://www.mendeley.com/}
 }
 @misc{,
-title = {{git reflog | Tutorial para aprender git}},
-url = {https://www.atlassian.com/git/tutorials/rewriting-history/git-reflog}
+	title = {{git reflog | Tutorial para aprender git}},
+	url = {https://www.atlassian.com/git/tutorials/rewriting-history/git-reflog}
 }
-@misc{,
-title = {{Travis CI - Integraci{\'{o}}n continua}},
-url = {https://travis-ci.org/trona85/GII-17.1B-UBULog-1.0/}
+@misc{web:travis,
+	title = {{Travis CI - Integraci{\'{o}}n continua}},
+	url = {https://travis-ci.org/trona85/GII-17.1B-UBULog-1.0/}
 }
 @misc{OscarFernandezArmengol,
-author = {{Oscar Fern{\'{a}}ndez Armengol}},
-title = {{GII-17.1B-UBULog-1.0 - sonarqube - Ver calidad del c{\'{o}}digo}},
-url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}
+	author = {{Oscar Fern{\'{a}}ndez Armengol}},
+	title = {{GII-17.1B-UBULog-1.0 - sonarqube - Ver calidad del c{\'{o}}digo}},
+	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}
+}
+@misc{web:sublime,
+	title = {{Sublime Text 3 - IDE para javaScript y html}},
+	url = {https://www.sublimetext.com/3}
 }
 @misc{,
-title = {{Sublime Text 3 - IDE para javaScript y html}},
-url = {https://www.sublimetext.com/3}
+	title = {{instalacion Moodle3.3 - MoodleDocs}},
+	url = {https://docs.moodle.org/33/en/Installing{\_}Moodle}
 }
-@misc{,
-title = {{instalacion Moodle3.3 - MoodleDocs}},
-url = {https://docs.moodle.org/33/en/Installing{\_}Moodle}
+@misc{moodle:webservice,
+	title = {{Funciones API web servic - MoodleDocs}},
+	url = {https://docs.moodle.org/dev/Web{\_}service{\_}API{\_}functions}
 }
-@misc{,
-title = {{Funciones API web servic - MoodleDocs}},
-url = {https://docs.moodle.org/dev/Web{\_}service{\_}API{\_}functions}
+@misc{javascript:chart,
+	title = {{Libreria para generar los graficos - Chart.js {\textperiodcentered} Cocumentaci{\'{o}}n}},
+	url = {http://www.chartjs.org/docs/latest/}
 }
-@misc{,
-title = {{Libreria para generar los graficos - Chart.js {\textperiodcentered} Cocumentaci{\'{o}}n}},
-url = {http://www.chartjs.org/docs/latest/}
+@misc{java:calendar,
+	title = {{Calendar (Java Platform SE 8 )}},
+	url = {https://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html{\#}set-int-int-}
 }
-@misc{,
-title = {{Calendar (Java Platform SE 8 )}},
-url = {https://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html{\#}set-int-int-}
+@misc{java:filewriter,
+	title = {{FileWriter (Java Platform SE 8 )}},
+	url = {https://docs.oracle.com/javase/8/docs/api/java/io/FileWriter.html}
 }
-@misc{,
-title = {{FileWriter (Java Platform SE 8 )}},
-url = {https://docs.oracle.com/javase/8/docs/api/java/io/FileWriter.html}
-}
-@misc{,
-title = {{Moodle.org: Estad{\'{i}}sticas del uso de moodle}},
-url = {https://moodle.net/stats/}
+@misc{moolde:estadistic,
+	title = {{Moodle.org: Estad{\'{i}}sticas del uso de moodle}},
+	url = {https://moodle.net/stats/}
 }
 @book{LasaGomez2017,
 abstract = {Índices},
@@ -71,7 +111,7 @@ url = {http://www.proyectosagiles.org/beneficios-de-scrum},
 year = {2008}
 }
 @article{art:mvc,
-keywords = {wiki},,
+keywords = {wiki},
 title = {{modelo vista controlador  — Wikipedia, La enciclopedia libre}},
 url = {https://es.wikipedia.org/wiki/Modelo–vista–controlador},
 year = {2017}
