--- a/doc/proyectdoc/tex/1_Introduccion.tex
+++ b/doc/proyectdoc/tex/1_Introduccion.tex
@@ -5,8 +5,8 @@ La mas utilizada y a la vez la que estamos utilizando en la Universidad de Burgo
 
 PONER ESTADISTICAS ACTUALES"""""""""""""""""""""""""""""
 
-Lo que queremos conseguir aprovechando el potencial de moodle, es, una aplicación de escritorio, en la que podremos pasarle un log, que nos lo generan los registros de moodle en cada asignatura y el profesor puede acceder a ellos sin ningún problema, para facilitarle su interpretación, con un muestreo de los datos en formato de gráficas, filtrando por usuarios de esa asignatura (contando con el usuario administrador, el usuario sistema, usuario invitado y desconocido, como no sabemos los usuarios exactos que hay en los moodle de producción, los colocaremos en desconocidos para controlar su interacción en la asignatura) y los tipos de evento realizado. 
-Con esto podremos permitir al profesor un control de su asignatura, casi completo. Por ejemplo, podra saber cuantas veces un alumno a entrado en calificaciones, a subido un trabajo, hasta si un administrador ha estado visitando su asignatura o creado nuevos elementos en ella.
+Lo que queremos conseguir aprovechando el potencial de moodle, es, una aplicación de escritorio, en la que podremos pasar el log correspondiente, que nos lo generan los registros de moodle en cada asignatura y el profesor puede acceder a ellos sin ningún problema, para facilitarle su interpretación, con un muestreo de los datos en formato de gráficas, filtrando por usuarios de esa asignatura (contando con el usuario administrador, el usuario sistema, usuario invitado y desconocido, como no sabemos los usuarios exactos que hay en los moodle de producción, los colocaremos en desconocidos para controlar su interacción en la asignatura) y los tipos de evento realizado. 
+Con esto podremos permitir al profesor un control de su asignatura, casi completo. Por ejemplo, podrá saber cuantas veces un alumno a entrado en calificaciones, a subido un trabajo, hasta si un administrador ha estado visitando su asignatura o creado nuevos elementos en ella.
 
 \section{Estructura de la memoria}\label{estructura-de-la-memoria}
 
