--- a/doc/proyectdoc/tex/4_Tecnicas_y_herramientas.tex
+++ b/doc/proyectdoc/tex/4_Tecnicas_y_herramientas.tex
@@ -5,16 +5,18 @@
 \subsection{Scrum}\label{scrum}
 
 Scrum es un marco de trabajo para el desarrollo de \emph{software} que se
-engloba dentro de las metodologías ágiles.En el se define un conjunto de practicas y roles durante el desarrollo del proyecto.Es una estrategia de trabajo iterativa e incremental a través de iteraciones (\emph{sprints})
+engloba dentro de las metodologías ágiles. En el se define un conjunto de practicas y roles durante el desarrollo del proyecto. Es una estrategia de trabajo iterativa e incremental a través de iteraciones (\emph{sprints})
 y revisiones. 
-Durante el proyecto se han hecho reuniones semanales con el tutor (\emph{sprints}) y según se iban terminando las tareas (\emph{issue}) se sincronizaba con el repositorio, lo que conlleva, que el tutor y el alumno tuvieran siempre el mismo código y se pudieran solucionar los problemas de forma rápida. %\citep{art:scrum}.
+
+Durante el proyecto se han llevado a cabo reuniones semanales con el tutor (\emph{sprints}) y según se iban terminando las tareas (\emph{issue}) se sincronizaba con el repositorio, lo que conlleva, que el tutor y el alumno tuvieran siempre el mismo código y se pudieran solucionar los problemas de forma rápida. \cite{Schwaber2004}
 
 \section{Patrones de diseño}\label{patrones-de-diseno}
 
 \subsection{\emph{Model-View-Presenter} (MVP)}\label{model-view-presenter-mvp}
 
 MVP es un patrón de arquitectura derivado del
-\emph{Model--View--Controller} (MVC).Fue de los primeros patrones relacionados con las vistas gráficas de interfaz de usuario. Permite separar los datos de nuestra aplicación en un modelo y enlazarlos con un controlador a las vistas que serán lo que ve el usuario.%\citep{art:mvc}. 
+\emph{Model--View--Controller} (MVC). Fue de los primeros patrones relacionados con las vistas gráficas de interfaz de usuario. Permite separar los datos de nuestra aplicación en un modelo y enlazarlos con un controlador a las vistas que serán lo que ve el usuario.\cite{art:mvc}
+
 Se compone de las tres capas con las que lleva su nombre:
 
 \begin{itemize}
@@ -40,7 +42,7 @@ Se compone de las tres capas con las que lleva su nombre:
 	Herramienta elegida: \href{https://git-scm.com/}{Git}.
 \end{itemize}
 
-Git es un sistema de control de versiones distribuido. Nos permite tener un repositorio remoto, que sera nuestro \emph{master} en el cual, cuando los cambios que hagamos en nuestro repositorio \emph{local} y consideremos que se pueden subir al \emph{master}, poder subirlo para compartirlo con el equipo. No nos hace falta estar permanentemente conectados a una red como con Subversion.Como no requiere de conexión, nos podríamos retraer a un commit anterior, ya que tenemos el historial de log en nuestro repositorio \emph{local}. 
+Git es un sistema de control de versiones distribuido. Nos permite tener dos repositorios un repositorio local y otro repositorio remoto, los dos tendrán como rama principal la \emph{master} en el cual, cuando los cambios que hagamos en nuestro repositorio \emph{local} y consideremos que se pueden subir al \emph{master}, podremos subirlo para compartirlo con el equipo. No nos hace falta estar permanentemente conectados a una red como con Subversion. Como no requiere de conexión, nos podríamos retraer a un commit anterior, ya que tenemos el historial de log en nuestro repositorio \emph{local}, sin internet y de forma local.\cite{web:git}
 
 Git se distribuye bajo la licencia de \emph{software} libre GNU LGPL v2.1.
 
@@ -61,7 +63,7 @@ Nos permite todas las  funcionalidades de Git, revisión de commit, revisión de
 documentación, gestión de tareas,... . Es
 gratuita cuando los proyectos son \emph{open source}.
 
-Con el plugin de Chrome Zedhub, en Github, nos permite tener la funcionalidad de canvas para la organización de tareas, como la plataforma Trello. Como estamos utilizando servicios de integración continua, teniendo el repositorio en Github, nos permite la sincronización solo con nuestra cuenta de Github.
+Con el plugin de Chrome Zedhub, en Github, nos permite tener la funcionalidad de canvas para la organización de tareas, como la plataforma Trello. Como estamos utilizando servicios de integración continua, teniendo el repositorio en Github, nos permite la sincronización solo con nuestra cuenta de Github. \cite{web:github}
 
 \section{Gestión del proyecto}\label{gestion-del-proyecto}
 
@@ -69,16 +71,14 @@ Con el plugin de Chrome Zedhub, en Github, nos permite tener la funcionalidad de
 	\tightlist
 	\item
 	Herramientas consideradas: \href{https://www.zenhub.com/}{ZenHub},
-	\href{https://trello.com/}{Trello}, \href{https://waffle.io/}{Waffle},
-	\href{https://www.versionone.com/}{VersionOne},
-	\href{https://xp-dev.com/}{XP-Dev} y \href{https://github.com/}{GitHub
-		Projects}.
+	\href{https://trello.com/}{Trello}
 	\item
 	Herramienta elegida: \href{https://www.zenhub.com/}{ZenHub}.
 \end{itemize}
 
-ZenHub es un plugin para los diferentes exploradores, en nuestro caso Chrome, de gestión de proyectos para su integración
-en GitHub. Proporciona un tablero canvas en donde cada tarea representada se corresponde con un \emph{issue} o tarea nativo de GitHub. Cada tarea puede ser organizada en un el \emph{sprint} al que pertenece con la asignación de ella, su tiempo estimado de realización, etc.Si el proyecto tiene menos de 5 colaboradores es \emph{open source}.
+ZenHub es un plugin desarrollado para exploradores web para integrar una nueva vista, mas organizativa, en Github. 
+
+Proporciona un tablero canvas en donde cada tarea representada se corresponde con un \emph{issue} o tarea, nativo de GitHub. Cada tarea puede ser organizada en el \emph{sprint} al que pertenece con la asignación de ella, su tiempo estimado de realización, etc.Si el proyecto tiene menos de 5 colaboradores es \emph{open source}. \cite{web:zenhub}
 
 
 \section{Entorno de desarrollo integrado
@@ -86,52 +86,30 @@ en GitHub. Proporciona un tablero canvas en donde cada tarea representada se cor
 
 \subsection{Java}\label{java}
 
-\begin{itemize}
-	\tightlist
-	\item
-	Herramientas consideradas:
-	\href{https://www.jetbrains.com/idea/}{IntelliJ IDEA} y
-	\href{https://eclipse.org/}{Eclipse}.
-	\item
-	Herramienta elegida: \href{https://eclipse.org/}{Eclipse}.
-\end{itemize}
-
-
+\subsubsection{eclipse neon}\label{eclipse}
+Es una aplicación con un entorno de desarrollo integrado (\emph{IDE}), nos facilita el trabajo a la hora de programar, nos proporciona un auto completar de métodos y clases y nos enseña, si lo tiene, una descripción de los métodos. Esto nos ayuda en un primer momento si no se conoce la librería a utilizar o los métodos. En nuestro caso lo utilizamos para programación java, aunque nos permite otro lenguaces, como puede ser php.
+Eclipse también nos permite funciones de caracterización que nos ahorran horas de trabajo y podemos conectarlo con git directamente para hacer commit. y ver de forma directa los cambios hechos o los ficheros que no están commiteados.\cite{web:eclipse}
 
 \subsection{LaTeX}\label{latex}
 
-\begin{itemize}
-	\tightlist
-	\item
-	Herramientas consideradas:
-	\item
-	Herramienta elegida:
-\end{itemize}
+\subsubsection{TexStudio}\label{texstudio}
 
+TeXstudio es un editor para crear documentos LaTeX. Nos permite compilar el documento, previsualizarlo, auto-completado, corrección de faltas. Se puede instalar en diferentes sistemas operativos. En el entorno Ubuntu 16.04, la instalación es sencilla, aparte del texStudio solo hay que instalar los paquetes de idiomas y ya podremos empezar a trabajar. \cite{web:texstudio}
 
+\subsection{JavaScript y HTML}\label{javascript-y-html}
 
-\section{Documentación}\label{documentacion}
+\subsubsection{Sublime Text}\label{sublime-text}
 
-\begin{itemize}
-	\tightlist
-	\item
-\end{itemize}
-
+Es una aplicación con un entorno de desarrollo integrado (\emph{IDE}), nos permite desarrollar proyectos en diferentes lenguajes, como python, php , java, html , javascript, etc. Como eclipse no tiene plugins para javaScript hemos optado por programar con sublime para html y javaScript. \cite{web:sublime}
 
 \section{Servicios de integración
 	continua}\label{servicios-de-integraciuxf3n-continua}
 
 \subsection{Compilación y testeo}\label{compilacion-y-testeo}
 
-\begin{itemize}
-	\tightlist
-	\item
-	Herramientas consideradas: \href{https://travis-ci.org/}{TravisCI} y
-	\href{https://circleci.com/}{CircleCI}.
-	\item
-	Herramienta elegida: \href{https://travis-ci.org/}{TravisCI}.
-\end{itemize}
+\subsubsection{TravisCI}\label{travis-ci}
 
+Travis es una herramienta de integración continua que esta alojada en la nube y que podemos sincronizarla con github. Esto nos permite, cada vez que hacemos un commit, montar nuestro proyecto y ejecutar las pruebas de forma automatizada, y cuando termine nos enviara un informe del resultado. \cite{web:travis}
 
 
 \subsection{Cobertura de código}\label{cobertura-de-codigo}
@@ -141,31 +119,21 @@ en GitHub. Proporciona un tablero canvas en donde cada tarea representada se cor
 	\item
 \end{itemize}
 
+TODAVIA NO CONSIDERADOOOOOOOOWEFQWEFQWE
+QWEFQWEFEQWF
+QWEFQW
+EF
+QWEF
+QWEF
+QWEF
+
 
 
 \subsection{Calidad del código}\label{calidad-del-codigo}
 
-\begin{itemize}
-	\tightlist
-	\item
-	Herramientas consideradas:
-	\href{https://codeclimate.com/}{Codeclimate},
-	\href{https://sonarqube.com/}{SonarQube} y
-	\href{https://www.codacy.com/}{Codacy}.
-	\item
-	Herramientas elegidas: \href{https://codeclimate.com/}{Codeclimate} y
-	\href{https://sonarqube.com/}{SonarQube}.
-\end{itemize}
+\subsubsection{SonarQube}\label{sonarqube}
 
-
-
-\subsection{Revisión de dependencias}\label{revision-de-dependencias}
-
-
-
-\subsection{Documentación continua}\label{documentacion-continua}
-
-
+SonarQube es una plataforma que tiene versión de escritorio y también esta alojada en la nube, de código abierto. Nos permite la sincronización con nuestro repositorio en GitHub y nos evaluá el código. Permite detectar bugs, código smell, código duplicado, etc. Es muy útil para mejorar el mantenimiento de tu proyecto. \cite{web:sonarqube}
 
 \section{Sistemas de construcción automática del
 	\emph{software}}\label{sistemas-de-construccion-automuxe1tica-del-software}
@@ -173,41 +141,51 @@ en GitHub. Proporciona un tablero canvas en donde cada tarea representada se cor
 
 
 \subsection{Gradle}\label{gradle}
-
+\href{https://gradle.org/}{Gradle} Es una herramienta para la automatización de build, puede ser instalada en el sistema operativo o como plugin en eclipse, el plugin tiene ciertas limitaciones, como por ejemplo la especificación de errores. hay veces que no te los dice y tienes que ejecutarlo desde consola, por eso, en nuestro proyecto, se ha utilizado los dos.
 
 
 \section{Librerías}\label{libreruxedas}
 
-\subsection{\texorpdfstring{\emph{Android Support
-			Library}}{Android Support Library}}\label{android-support-library}
-
 
 \subsection{JavaFX}\label{javafx}
 
+\href{http://docs.oracle.com/javase/8/javase-clienttechnologies.htm}{JavaFX}
+es una librería para la creación de interfaces gráficas en Java.
+
+\subsection{Log4j}\label{log4j}
+
+\subsection{Httpclient}\label{httpclient}
+
+\subsection{Json}\label{json}
+
+\subsection{Commons-csv}\label{commons-csv}
+
+\subsection{Json}\label{json}
+
+%\subsection{JUnit}\label{junit}
 
 
-\subsection{JUnit}\label{junit}
-
-
-\subsection{Mockito}\label{mockito}
-
-
-\newpage
-\section{Desarrollo web}\label{pagina-web}
-
-\subsection{GitHub Pages}\label{github-pages}
-
-
-
-\subsection{Bootstrap}\label{bootstrap}
-
+%\subsection{Mockito}\label{mockito}
 
 
 \section{Otras herramientas}\label{otras-herramientas}
 
+\subsection{Moodle 3.3}\label{moodle}
+
 \subsection{Mendeley}\label{mendeley}
 
+\href{https://www.mendeley.com/}{Mendeley} es un gestor de citas bibliográficas. Con el podremos guardar todas las referencias que estemos utilizando y exportarlas a bibtex para latex sin mucho esfuerzo.
 
+\subsection{JsonView}\label{jsonview}
 
+\href{https://chrome.google.com/webstore/detail/jsonview/chklaanhfefbnpoihckbnefhakgolnmc}{Json} este plugin de Chrome nos facilita la lectura de los Json formateando y coloreándolo.
 
- $
+\subsection{Scene Builder}\label{scene-builder}
+
+\href{http://www.oracle.com/technetwork/java/javase/downloads/javafxscenebuilder-info-2157684.html}{Scene Builder} es una aplicación para diseñar la interfaz de usuario de una manera sencilla. Scene builder es de Oracle con ella podremos generar los archivos .fxml que serán los que cargaremos para ver las vistas del usuario.
+
+\subsection{Pinta}\label{pinta}
+
+\href{https://pinta-project.com/pintaproject/pinta/}{Pinta} es una aplicación para Ubuntu que se encarga de la creación y edición de imágenes.
+
+\subsection{MySQL worckbench}\label{pinta}
