--- a/doc/proyectdoc/memoria.tex
+++ b/doc/proyectdoc/memoria.tex
@@ -353,10 +353,10 @@
   }
 \makeatother
 
-\newcommand{\nombre}{Nombre del alumno} %%% cambio de comando
+\newcommand{\nombre}{Oscar Fernández Armengol} %%% cambio de comando
 
 % Datos de portada
-\title{título del TFG}
+\title{UBULog 1.0}
 \author{\nombre}
 \tutor{nombre tutor}
 \date{\today}
