--- a/doc/proyectdoc/tex/4_Tecnicas_y_herramientas.tex
+++ b/doc/proyectdoc/tex/4_Tecnicas_y_herramientas.tex
@@ -154,13 +154,15 @@ es una librería para la creación de interfaces gráficas en Java.
 
 \subsection{Log4j}\label{log4j}
 
+Log4j es una librería de java desarrollada por la compañía Apache software fundation que nos permite en nuestra aplicación escribir mensajes de registro, como pueden ser errores o warnings. También nos permite configurar el filtrado de mensajes para que el programador pueda ver los tipo de errores que desee. \cite{Java:log}
+
 \subsection{Httpclient}\label{httpclient}
 
-\subsection{Json}\label{json}
+Httpclient es una librería de Google diseñada para java, lo que nos permite es hacer peticiones http. Con esta librería haremos las peticiones a ubuvirtual para que nos de los datos correspondientes. \cite{java:Httpclient}
 
 \subsection{Commons-csv}\label{commons-csv}
 
-\subsection{Json}\label{json}
+Commons-csv es una librería creada por Apache software fundation para java, que nos facilita la obtención de datos de un csv. \cite{java:csvparser}
 
 %\subsection{JUnit}\label{junit}
 
@@ -171,6 +173,8 @@ es una librería para la creación de interfaces gráficas en Java.
 \section{Otras herramientas}\label{otras-herramientas}
 
 \subsection{Moodle 3.3}\label{moodle}
+
+\href{https://moodle.org/?lang=es}{Moodle} es una plataforma de gestion de aprendizaje que lo utilizan muchos centros dedicados a la enseñanza, entre ellos, la universidad de Burgos. 
 
 \subsection{Mendeley}\label{mendeley}
 
@@ -189,3 +193,5 @@ es una librería para la creación de interfaces gráficas en Java.
 \href{https://pinta-project.com/pintaproject/pinta/}{Pinta} es una aplicación para Ubuntu que se encarga de la creación y edición de imágenes.
 
 \subsection{MySQL worckbench}\label{pinta}
+
+\href{https://pinta-project.com/pintaproject/pinta/}{MySQL worckbench} es una aplicación para desarrolladores o diseñadores de bases de datos o que tengan que trabajar con bases de datos. Nos permite importar o exportar BD, ver su entidad/relación para saber como se comunican las tablas, saber su estructura, etc. \cite{web:worckbench}
