--- a/doc/proyectdoc/tex/1_Introduccion.tex
+++ b/doc/proyectdoc/tex/1_Introduccion.tex
@@ -3,7 +3,11 @@
 Los profesores, a día de hoy, utilizan plataformas para poder facilitar su trabajo, proporcionando recursos, haciendo exámenes o teses, de manera on-line. No es que se quede anticuada la forma tradicional de impartir clases, si no que evoluciona, para facilitar el trabajo a ellos mismos y a los alumnos.
 La mas utilizada y a la vez la que estamos utilizando en la Universidad de Burgos es moodle, en concreto la versión 3.3.
 
-PONER ESTADISTICAS ACTUALES"""""""""""""""""""""""""""""
+\imagen{citymoodle}{Estadística ciudades mas utilizan moodle.}
+
+\imagen{cytiremoodle}{Datos de uso de moodle.}
+
+\imagen{versionmoodle}{Versiones mas utilizadas.}
 
 Lo que queremos conseguir aprovechando el potencial de moodle, es, una aplicación de escritorio, en la que podremos pasar el log correspondiente, que nos lo generan los registros de moodle en cada asignatura y el profesor puede acceder a ellos sin ningún problema, para facilitarle su interpretación, con un muestreo de los datos en formato de gráficas, filtrando por usuarios de esa asignatura (contando con el usuario administrador, el usuario sistema, usuario invitado y desconocido, como no sabemos los usuarios exactos que hay en los moodle de producción, los colocaremos en desconocidos para controlar su interacción en la asignatura) y los tipos de evento realizado. 
 Con esto podremos permitir al profesor un control de su asignatura, casi completo. Por ejemplo, podrá saber cuantas veces un alumno a entrado en calificaciones, a subido un trabajo, hasta si un administrador ha estado visitando su asignatura o creado nuevos elementos en ella.
@@ -31,9 +35,7 @@ La memoria sigue la siguiente estructura:
 	\textbf{Aspectos relevantes del desarrollo:} exposición de aspectos
 	destacables que tuvieron lugar durante la realización del proyecto.
 	\item
-	\textbf{Trabajos relacionados:} estado del arte en el campo de la
-	monitorización de la actividad de vuelo de colmenas y proyectos
-	relacionados.
+	\textbf{Trabajos relacionados:} .
 	\item
 	\textbf{Conclusiones y líneas de trabajo futuras:} conclusiones
 	obtenidas tras la realización del proyecto y posibilidades de mejora o
