Añadida librería, recursos externos y comienzo conceptos teóricos [#13]

--- a/doc/proyectdoc/My Collection.bib
+++ b/doc/proyectdoc/My Collection.bib
@@ -1,40 +1,5 @@
-@misc{Java:csv,
-title = {{Commons CSV – Home}},
-url = {https://commons.apache.org/proper/commons-csv/},
-urldate = {2017-12-04}
-}
-@misc{Java:httpclient,
-title = {{Biblioteca de clientes HTTP para Java | Desarrolladores de Google}},
-url = {https://developers.google.com/api-client-library/java/google-http-java-client/},
-urldate = {2017-12-04}
-}
-@misc{Java:log,
-title = {{Log4j – Apache Log4j 2 - Apache Log4j 2}},
-url = {https://logging.apache.org/log4j/2.x/},
-urldate = {2017-12-04}
-}
-@misc{Web:worckbench,
-title = {{MySQL :: MySQL Workbench}},
-url = {https://www.mysql.com/products/workbench/},
-urldate = {2017-12-04}
-}
-@misc{Web:sonarqube,
-title = {{GII-17.1B-UBULog-1.0 - trona85}},
-url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0},
-urldate = {2017-12-03}
-}
-@misc{Web:texsturdio,
-title = {{TeXstudio}},
-url = {https://www.texstudio.org/},
-urldate = {2017-12-03}
-}
-@misc{Web:eclipse,
-title = {{Eclipse Neon}},
-url = {https://www.eclipse.org/neon/},
-urldate = {2017-12-03}
-}
-@misc{Web:zenhub,
-title = {zenhub},
-url = {https://www.zenhub.com/faq},
-urldate = {2017-12-03}
+@misc{Java:htmlunit,
+title = {{HtmlUnit – Welcome to HtmlUnit}},
+url = {http://htmlunit.sourceforge.net/},
+urldate = {2017-12-07}
 }
