--- a/doc/proyectdoc/bibliografia.bib
+++ b/doc/proyectdoc/bibliografia.bib
@@ -1,3 +1,8 @@
+@misc{Java:htmlunit,
+	title = {{HtmlUnit – Welcome to HtmlUnit}},
+	url = {http://htmlunit.sourceforge.net/},
+	urldate = {2017-12-07}
+}
 @misc{Java:csv,
 	title = {{Commons CSV – Home}},
 	url = {https://commons.apache.org/proper/commons-csv/},
