--- a/doc/proyectdoc/tex/1_Introduccion.tex
+++ b/doc/proyectdoc/tex/1_Introduccion.tex
@@ -61,7 +61,11 @@ Además, los siguientes recursos están accesibles a través de internet:
 \begin{itemize}
 	\tightlist
 	\item
-	Página web del proyecto LA QUE SEA......
+	\href{https://github.com/trona85/GII-17.1B-UBULog-1.0}{Github del proyecto.}
+	\item
+	\href{https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}{Sonarqube del proyecto.}
+	\item
+	\href{https://travis-ci.org/trona85/GII-17.1B-UBULog-1.0/}{Travis CI del proyecto.}
 	
 \end{itemize}
 
