--- a/doc/proyectdoc/tex/4_Tecnicas_y_herramientas.tex
+++ b/doc/proyectdoc/tex/4_Tecnicas_y_herramientas.tex
@@ -164,6 +164,18 @@ Httpclient es una librería de Google diseñada para java, lo que nos permite es
 
 Commons-csv es una librería creada por Apache software fundation para java, que nos facilita la obtención de datos de un csv. \cite{java:csvparser}
 
+\subsection{HtmlUnit}\label{htmlunit}
+\begin{itemize}
+	\tightlist
+	\item
+	Herramientas consideradas: \href{https://jsoup.org/}{Jsoup},
+	\href{http://www.seleniumhq.org/}{Selenium} y
+	\href{http://htmlunit.sourceforge.net/}{HtmlUnit}.
+	\item
+	Herramienta elegida: \href{http://htmlunit.sourceforge.net/}{HtmlUnit}.
+\end{itemize}
+
+HtmlUnit es una librería para java, que nos permite la iteración en paginas web o \emph{web scripting}, nos permite rellenar formularios, hacer click sobre botones, incluso recoger archivos descargados de la web. \cite{Java:htmlunit}
 %\subsection{JUnit}\label{junit}
 
 
