Añadido de nombres del alumno y tutor. [#13]

--- a/doc/proyectdoc/anexos.tex
+++ b/doc/proyectdoc/anexos.tex
@@ -345,9 +345,9 @@
 
 
 % Datos de portada
-\title{título del TFG \\Documentación Técnica}
-\author{nombre alumno}
-\tutor{nombre tutor}
+\title{UBULog-1.0 \\Documentación Técnica}
+\author{Oscar Fernández Armengol}
+\tutor{Raúl Marticorena Sanchez}
 \date{\today}
 
 \begin{document}
