--- a/doc/proyectdoc/memoria.tex
+++ b/doc/proyectdoc/memoria.tex
@@ -358,7 +358,7 @@
 % Datos de portada
 \title{UBULog 1.0}
 \author{\nombre}
-\tutor{nombre tutor}
+\tutor{Raúl Marticorena Sanchez}
 \date{\today}
 
 \begin{document}
@@ -379,7 +379,7 @@
 
 \noindent Expone:
 
-\noindent Que el alumno D. \nombre, con DNI dni, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado título de TFG. 
+\noindent Que el alumno D. \nombre, con DNI 71346020-C, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado título de TFG. 
 
 \noindent Y que dicho trabajo ha sido realizado por el alumno bajo la dirección del que suscribe, en virtud de lo cual se autoriza su presentación y defensa.
 
@@ -399,8 +399,8 @@ D. nombre tutor
 \hfill
 \begin{minipage}{0.45\textwidth}
 \begin{flushleft} %\large
-Vº. Bº. del co-tutor:\\[2cm]
-D. nombre co-tutor
+%Vº. Bº. del co-tutor:\\[2cm]
+%D. nombre co-tutor
 \end{flushleft}
 \end{minipage}
 \hfill
