Imagenes y extructura sprints [#13]

--- a/doc/proyectdoc/tex/A_Plan_proyecto.tex
+++ b/doc/proyectdoc/tex/A_Plan_proyecto.tex
@@ -2,7 +2,124 @@
 
 \section{Introducción}
 
+En este documento hablaremos de la planificación del proyecto, que es una parte muy importante. Aquí analizaremos el tiempo de desarrollo y el presupuesto que se necesitara para llevarlo a cabo.
+
+lo dividiremos en dos partes:
+
+\begin{itemize}
+	\tightlist
+	\item
+	Planificación temporal del proyecto.
+	\item
+	Estudio de viabilidad del proyecto.
+\end{itemize}
+
+En la planificación temporal hablaremos de cada uno de los \emph{sprints} necesarios para su realización, el tiempo estimado y el tiempo real de realización.
+
+En el estudio de viabilidad hablaremos de los costes y beneficios que nos aporta esta aplicación y su viabilidad legal, que se refiere a las licencias de uso del código ajeno que hemos utilizado en el desarrollo para poder comercializar nuestra aplicación.
+
 \section{Planificación temporal}
+
+Al inicio del proyecto se propuso utilizar una metodología ágil, en concreto Scrum, ya que se decidió tener reuniones semanales para hablar de los cambios realizados, problemas ocasionados y planificación del siguiente Sprint que se realizara. No se ha conseguido desarrollar la metodología al 100\% ya que el el equipo de desarrollo constaba de 1 persona (Oscar Fernández Armengol), pero desechando este punto, se ha conseguido un desarrollo ágil en sus demás puntos. 
+
+\begin{itemize}
+	\tightlist
+	\item
+	Se aplicó una estrategia de desarrollo incremental a través de
+	iteraciones (\emph{sprints}) y revisiones.
+	\item
+	La duración media de los \emph{sprints} fue de una semana.
+	\item
+	Al finalizar cada \emph{sprint} se entregaba un producto funcional con la nueva especificación en el caso de que estuviera terminada.
+	\item
+	Se realizaban reuniones de revisión al finalizar cada \emph{sprint}, de resolución de dudas y
+	al mismo tiempo de planificación del nuevo \emph{sprint}.
+	\item
+	En la planificación del \emph{sprint} se generaba una lista de tareas a realizar (nuevas funcionalidades o bugs a solucionar).
+	\item
+	Se estimaba el tiempo de realización de las tareas a realizar en el \emph{canvas}.
+	\item
+	Para monitorizar el progreso del proyecto se utilizan los gráficos generados en github.
+	
+\end{itemize}
+
+\subsection{Sprint 1 (03/10/17 -
+	10/10/17)}\label{sprint-1-0031017---101017}
+Este \emph{sprint} fue el comienzo del proyecto, aunque en reuniones previas se hablo con el tutor de las propuestas que tenia para la elección del proyecto, una vez el tutor (Raúl Marticorena Sanchez) acepto tutorizar al alumno (Oscar Fernández Armengol) se puedo empezar el desarrollo.
+
+Los objetivos fueron: preparación del entorno de desarrollo
+\begin{itemize}
+	\tightlist
+	\item
+	Preparación del entorno de desarrollo.
+	\item
+	Familiarización con la aplicación heredada \href{https://github.com/claumartinezh/TFG_UBUGrades}{UBUGrades}.
+	\item
+	Investigación del web service de moodle
+	\item
+	Creación de un esqueleto del proyecto para poder empezar a trabajar.
+	
+\end{itemize}
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/1?closed=1}{Sprint 1} se estimo en 6 días de trabajo y se realizo en esos 6 días.
+
+\imagen{sprint1}{Sprint 1.}
+
+\subsection{Sprint 2 (10/10/17 -
+	17/10/17)}\label{sprint-2-101017---171017}
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/2?closed=1}{Sprint 2}
+
+\imagen{sprint2}{Sprint 2.}
+
+\subsection{Sprint 3 (17/10/17 -
+	24/10/17)}\label{sprint-3-171017---241017}
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/3?closed=1}{Sprint 3} 
+
+\imagen{sprint3}{Sprint 3.}
+
+\subsection{Sprint 4 (24/10/17 -
+	7/11/17)}\label{sprint-4-241017---071117}
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/4?closed=1}{Sprint 4} 
+
+\imagen{sprint4}{Sprint 4.}
+
+\subsection{Sprint 5 (7/11/17 -
+	14/11/17)}\label{sprint-5-071117---141117}
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/5?closed=1}{Sprint 5} 
+
+\imagen{sprint5}{Sprint 5.}
+
+\subsection{Sprint 6 (14/11/17 -
+	22/11/17)}\label{sprint-6-141117---221117}
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/6?closed=1}{Sprint 6} 
+
+\imagen{sprint6}{Sprint 6.}
+
+\subsection{Sprint 7 (22/11/17 -
+	29/11/17)}\label{sprint-7-221117---291117}
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/7?closed=1}{Sprint 7} 
+
+\imagen{sprint7}{Sprint 7.}
+
+\subsection{Sprint 8 (28/11/17 -
+	06/12/17)}\label{sprint-8-281117---061217}
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/8?closed=1}{Sprint 8} 
+
+\imagen{sprint8}{Sprint 8.}
+
+\subsection{Sprint 9 (06/12/17 -
+	13/12/17)}\label{sprint-8-061217---131217}
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/9?closed=1}{Sprint 9}
+
+
+
 
 \section{Estudio de viabilidad}
 
